IE Mobile: Fix for Navigation covering the header

--- a/client/styles/_navigation.less
+++ b/client/styles/_navigation.less
@@ -65,3 +65,7 @@
   position: absolute;
   z-index: @zindexFixedNavbar + 3;
 }
+
+.navbar-fixed-top {
+  position: absolute;
+}
